IGBF-2039 : Fixing author Alignment Issue on App Page

--- a/static/apps/css/base.css
+++ b/static/apps/css/base.css
@@ -169,7 +169,7 @@ h4 a:active {
     height: 65px;
     background-repeat: no-repeat;
     background-size: contain;
-    margin: 12px 10px 12px 10px;
+    margin: 7px 7px 7px 0px;
 }
 
 .appimg{
